# OrbitWarsCLI

./: .gitignore  README.md  pyproject.toml
agents/current/: README.md  agent.yaml  main.py  report.md
agents/defensive_turtle/: README.md  agent.yaml  main.py  report.md
agents/fast_v1/: README.md  agent.yaml  main.py  report.md
agents/safe_sniper/: README.md  agent.yaml  main.py  report.md
agents/starter_sniper/: README.md  agent.yaml  main.py  report.md
scripts/: start.ps1  start.sh
src/agent_buffet/: __init__.py  cli.py  config.py  kaggle_api.py  paths.py
src/agent_buffet/llm/: __init__.py  roles.py
src/agent_buffet/mining/: __init__.py  idea_extractor.py
src/agent_buffet/orbit_wars/: __init__.py  adapter.py  official.py  reports.py
src/agent_buffet/orbit_wars/templates/: advanced_modular.py.j2  simple_sniper.py.j2
src/agent_buffet/storage/: db.py  schema.sql
